# JSONPP

./: .gitignore  COMMIT_MESSAGE_v1.0.5.txt  OPERATIONS_JONX.md  README.md  VIEWER_GUI.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: workflow.yml  workflow.yml 
src/jsonplusplus/: cli.py  decoder.py  encoder.py  viewer.py  viewer_main.py
src/jsonplusplus/utils/: type_detection.py
template /: convert.html
