[project]
name = "jsonplusplus"
version = "2.0.1"
description = "Un convertisseur JSON ↔ JSON++ optimisé"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nathan Josue"},
]

keywords = ["json", "json++", "data", "conversion", "parser", "jsonpp", "jsonplusplus", "structure", "jonx"]

dependencies = []

[project.optional-dependencies]
gui = ["customtkinter>=5.2.0"]

[project.scripts]
jsonplusplus = "jsonplusplus.cli:main"
jonx = "jsonplusplus.cli:main"
jonx-viewer = "jsonplusplus.viewer_main:main"

[project.urls]
Homepage = "https://github.com/Nathan-Josue/jsonplusplus"
Repository = "https://github.com/Nathan-Josue/jsonplusplus"
Issues = "https://github.com/Nathan-Josue/jsonplusplus/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
